Styling changes, adding favicon, trying to fix mobile layout issues

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -12,6 +12,12 @@
 	position:relative
 }
 
+.form {
+	p, .relative_container {
+		position: relative;
+	}
+}
+
 .form .form_header {
 	margin: 10px 0;
 	padding-bottom: 10px;
@@ -112,7 +118,8 @@
 
 .form .input_error_container {
 	position: absolute;
-	right: 15px;
+	right: 0px;
+	bottom: -23px;
 	padding: 5px 10px;
 	font-size: 0.7em;
 	color: #c40022;
